--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,8 @@
 [core]
-    remote = storage
+    remote = dvc-remote
 ['remote "storage"']
     url = s3://mybucket/dvcstore
+['remote "myremote"']
+    url = ..
+['remote "dvc-remote"']
+    url = ../../dvc-storage
